--- a/.vibeconfig.json
+++ b/.vibeconfig.json
@@ -6,6 +6,7 @@
             "baseURL": "https://generativelanguage.googleapis.com",
             "defaultModel": "gemini-2.0-flash-exp",
             "models": [
+                "gemini-2.5-pro",
                 "gemini-2.0-flash-exp",
                 "gemini-1.5-pro",
                 "gemini-1.5-flash"
