--- a/.vibeconfig.json
+++ b/.vibeconfig.json
@@ -1,48 +1,127 @@
 {
     "proxy": null,
     "defaultProvider": "gemini",
-    "providers": {
-        "gemini": {
-            "baseURL": "https://generativelanguage.googleapis.com",
-            "defaultModel": "gemini-2.5-pro",
-            "models": [
-                "gemini-2.5-pro",
-                "gemini-2.0-flash-exp",
-                "gemini-1.5-pro",
-                "gemini-1.5-flash"
-            ]
-        },
-        "chatgpt": {
-            "baseURL": "https://api.openai.com/v1",
-            "defaultModel": "gpt-4o",
-            "models": [
-                "gpt-4o",
-                "o1-preview",
-                "gpt-4-turbo"
-            ]
-        },
-        "deepseek": {
-            "baseURL": "https://api.deepseek.com/v1",
-            "defaultModel": "deepseek-chat",
-            "models": [
-                "deepseek-chat",
-                "deepseek-reasoner"
-            ]
-        },
-        "claude": {
-            "baseURL": "https://api.anthropic.com/v1",
-            "defaultModel": "claude-3-5-sonnet-20241022",
-            "models": [
-                "claude-3-5-sonnet-20241022",
-                "claude-3-opus-20240229",
-                "claude-3-haiku-20240307"
-            ]
-        },
-        "ollama": {
-            "baseURL": "http://localhost:11434/v1",
-            "defaultModel": "deepseek-r1:latest",
-            "type": "local",
-            "models": []
+    {
+        "providers": {
+            "gemini": {
+                "models": {
+                    "gemini-2.5-pro": {
+                        "contextWindow": 2000000,
+                        "supportsImages": true,
+                        "family": "gemini"
+                    },
+                    "gemini-2.0-flash-exp": {
+                        "contextWindow": 1000000,
+                        "supportsImages": true,
+                        "family": "gemini"
+                    },
+                    "gemini-1.5-pro": {
+                        "contextWindow": 2000000,
+                        "supportsImages": true,
+                        "family": "gemini"
+                    },
+                    "gemini-1.5-flash": {
+                        "contextWindow": 1000000,
+                        "supportsImages": true,
+                        "family": "gemini"
+                    },
+                    "gemini-1.0-pro": {
+                        "contextWindow": 30000,
+                        "supportsImages": false,
+                        "family": "gemini"
+                    }
+                }
+            },
+            "chatgpt": {
+                "models": {
+                    "gpt-4o": {
+                        "contextWindow": 128000,
+                        "supportsImages": true,
+                        "family": "gpt"
+                    },
+                    "o1-preview": {
+                        "contextWindow": 128000,
+                        "supportsImages": true,
+                        "family": "gpt"
+                    },
+                    "gpt-4-turbo": {
+                        "contextWindow": 128000,
+                        "supportsImages": true,
+                        "family": "gpt"
+                    },
+                    "gpt-4": {
+                        "contextWindow": 8192,
+                        "supportsImages": false,
+                        "family": "gpt"
+                    },
+                    "gpt-3.5-turbo": {
+                        "contextWindow": 16385,
+                        "supportsImages": false,
+                        "family": "gpt"
+                    }
+                }
+            },
+            "claude": {
+                "models": {
+                    "claude-3-5-sonnet-20241022": {
+                        "contextWindow": 200000,
+                        "supportsImages": true,
+                        "family": "claude"
+                    },
+                    "claude-3-5-sonnet-20240620": {
+                        "contextWindow": 200000,
+                        "supportsImages": true,
+                        "family": "claude"
+                    },
+                    "claude-3-opus-20240229": {
+                        "contextWindow": 200000,
+                        "supportsImages": true,
+                        "family": "claude"
+                    },
+                    "claude-3-sonnet-20240229": {
+                        "contextWindow": 200000,
+                        "supportsImages": true,
+                        "family": "claude"
+                    },
+                    "claude-3-haiku-20240307": {
+                        "contextWindow": 200000,
+                        "supportsImages": true,
+                        "family": "claude"
+                    }
+                }
+            },
+            "deepseek": {
+                "models": {
+                    "deepseek-chat": {
+                        "contextWindow": 64000,
+                        "supportsImages": false,
+                        "family": "other"
+                    },
+                    "deepseek-coder": {
+                        "contextWindow": 64000,
+                        "supportsImages": false,
+                        "family": "other"
+                    },
+                    "deepseek-reasoner": {
+                        "contextWindow": 64000,
+                        "supportsImages": false,
+                        "family": "other"
+                    }
+                }
+            },
+            "ollama": {
+                "models": {
+                    // Ollama models are user-defined, but we can provide hints/defaults for common ones
+                    "deepseek-r1:latest": {
+                        "contextWindow": 8192,
+                        "family": "other"
+                    },
+                    "llama3:latest": {
+                        "contextWindow": 8192,
+                        "family": "other"
+                    }
+                }
+            }
         }
     },
     "defaultTerminalPolicy": "turbo",
