--- a/.vibeconfig.json
+++ b/.vibeconfig.json
@@ -8,15 +8,40 @@
             "headers": {
                 "Content-Type": "application/json"
             },
-            "defaultModel": "gemini-1.5-flash",
+            "defaultModel": "gemini-1.5-flash-latest",
             "models": {
+                "gemini-2.0-flash-exp": {
+                    "contextWindow": 1048576,
+                    "supportsImages": true,
+                    "tags": [
+                        "code",
+                        "agent",
+                        "fast"
+                    ]
+                },
+                "gemini-1.5-pro-latest": {
+                    "contextWindow": 2097152,
+                    "supportsImages": true,
+                    "tags": [
+                        "reasoning",
+                        "code",
+                        "top-tier"
+                    ]
+                },
+                "gemini-1.5-flash-latest": {
+                    "contextWindow": 1048576,
+                    "supportsImages": true,
+                    "tags": [
+                        "code",
+                        "fast"
+                    ]
+                },
                 "gemini-1.5-pro": {
                     "contextWindow": 2097152,
                     "supportsImages": true,
                     "tags": [
-                        "code",
                         "reasoning",
-                        "long-context"
+                        "code"
                     ]
                 },
                 "gemini-1.5-flash": {
@@ -25,56 +50,6 @@
                     "tags": [
                         "code",
                         "fast"
-                    ]
-                },
-                "gemini-2.0-flash": {
-                    "contextWindow": 1048576,
-                    "supportsImages": true,
-                    "tags": [
-                        "fast",
-                        "agent"
-                    ]
-                },
-                "gemini-2.0-pro": {
-                    "contextWindow": 2097152,
-                    "supportsImages": true,
-                    "tags": [
-                        "reasoning",
-                        "top-tier"
-                    ]
-                },
-                "gemini-2.5-flash": {
-                    "contextWindow": 1048576,
-                    "supportsImages": true,
-                    "tags": [
-                        "fast",
-                        "cost-efficient"
-                    ]
-                },
-                "gemini-2.5-pro": {
-                    "contextWindow": 2097152,
-                    "supportsImages": true,
-                    "tags": [
-                        "reasoning",
-                        "agent",
-                        "top-tier"
-                    ]
-                },
-                "gemini-3-pro-preview": {
-                    "contextWindow": 2097152,
-                    "supportsImages": true,
-                    "tags": [
-                        "reasoning",
-                        "state-of-the-art",
-                        "multimodal"
-                    ]
-                },
-                "gemini-3-flash-preview": {
-                    "contextWindow": 1048576,
-                    "supportsImages": true,
-                    "tags": [
-                        "fast",
-                        "reasoning"
                     ]
                 }
             }
