--- a/.vibeconfig.json
+++ b/.vibeconfig.json
@@ -64,7 +64,7 @@
                 "Content-Type": "application/json"
             },
             "apiKey": "${GEMINI_API_KEY}",
-            "defaultModel": "gemini-3-flash-preview",
+            "defaultModel": "gemini-2.0-flash-exp",
             "models": {
                 "gemini-3-flash-preview": {
                     "contextWindow": 1048576,
@@ -325,9 +325,9 @@
         "hybrid": {
             "type": "hybrid",
             "brain": "gemini",
-            "brainModel": "gemini-3-flash-preview",
+            "brainModel": "gemini-2.0-flash-exp",
             "worker": "gemini",
-            "workerModel": "gemini-3-flash-preview"
+            "workerModel": "gemini-2.0-flash-exp"
         }
     }
 }
