--- a/.vibeconfig.json
+++ b/.vibeconfig.json
@@ -1,8 +1,10 @@
 {
+    "proxy": null,
     "defaultProvider": "gemini",
-    "defaultAuthorityLevel": "FULL_AUTONOMY",
-    "defaultCognitionMode": "ENGINEER",
+    "defaultAuthorityLevel": "EXECUTE_WITH_CONFIRM",
+    "defaultCognitionMode": "ASSISTANT",
     "defaultTerminalPolicy": "turbo",
+    "defaultTaskScope": "FULL_PROJECT",
     "rag": {
         "enabled": false,
         "autoIndex": true,
@@ -55,7 +57,6 @@
             ]
         }
     },
-    "proxy": null,
     "providers": {
         "gemini": {
             "baseURL": "https://generativelanguage.googleapis.com/v1beta",
@@ -66,7 +67,17 @@
             "apiKey": "${GEMINI_API_KEY}",
             "defaultModel": "gemini-2.0-flash-exp",
             "models": {
-                "gemini-3-flash-preview": {
+                "gemini-2.0-flash-thinking-exp-1219": {
+                    "contextWindow": 32768,
+                    "supportsImages": true,
+                    "tags": [
+                        "reasoning",
+                        "code",
+                        "thinking",
+                        "experimental"
+                    ]
+                },
+                "gemini-2.0-flash-exp": {
                     "contextWindow": 1048576,
                     "supportsImages": true,
                     "tags": [
@@ -76,39 +87,50 @@
                         "newest"
                     ]
                 },
-                "gemini-2.5-flash": {
-                    "contextWindow": 1048576,
-                    "supportsImages": true,
-                    "tags": [
-                        "code",
-                        "agent",
-                        "fast"
-                    ]
-                },
-                "gemini-2.0-flash-exp": {
-                    "contextWindow": 1048576,
-                    "supportsImages": true,
-                    "tags": [
-                        "code",
-                        "agent",
-                        "fast"
-                    ]
-                },
-                "gemini-1.5-pro-latest": {
+                "gemini-1.5-pro": {
                     "contextWindow": 2097152,
                     "supportsImages": true,
                     "tags": [
                         "reasoning",
                         "code",
-                        "top-tier"
+                        "top-tier",
+                        "stable"
                     ]
                 },
-                "gemini-1.5-flash-latest": {
+                "gemini-1.5-pro-002": {
+                    "contextWindow": 2097152,
+                    "supportsImages": true,
+                    "tags": [
+                        "reasoning",
+                        "code",
+                        "stable"
+                    ]
+                },
+                "gemini-1.5-flash": {
                     "contextWindow": 1048576,
                     "supportsImages": true,
                     "tags": [
                         "code",
-                        "fast"
+                        "fast",
+                        "stable"
+                    ]
+                },
+                "gemini-1.5-flash-002": {
+                    "contextWindow": 1048576,
+                    "supportsImages": true,
+                    "tags": [
+                        "code",
+                        "fast",
+                        "stable"
+                    ]
+                },
+                "gemini-1.5-flash-8b": {
+                    "contextWindow": 1048576,
+                    "supportsImages": true,
+                    "tags": [
+                        "code",
+                        "fast",
+                        "lightweight"
                     ]
                 }
             }
@@ -325,9 +347,9 @@
         "hybrid": {
             "type": "hybrid",
             "brain": "gemini",
-            "brainModel": "gemini-2.0-flash-exp",
+            "brainModel": "gemini-1.5-flash-001",
             "worker": "gemini",
-            "workerModel": "gemini-2.0-flash-exp"
+            "workerModel": "gemini-1.5-flash-001"
         }
     }
 }
